refactored endpoints. modified for return output.
