# shopify-seller-api/pkg/swagger/server/models/swatch_row.go
@@ -1,0 +1,103 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// SwatchRow Single Row of data to produce a color swatch for a specific Make Model Year, and Color
+//
+// swagger:model swatchRow
+type SwatchRow struct {
+
+	// color code on row
+	ColorCode string `json:"colorCode,omitempty"`
+
+	// color name on row
+	ColorName string `json:"colorName,omitempty"`
+
+	// the handle for the product variation example is make-model-year-touch-up-kit
+	Handle string `json:"handle,omitempty"`
+
+	// hex code value on row. Field name is Variant Metafield variants.color [color]
+	HexCode string `json:"hexCode,omitempty"`
+
+	// Vehicle make on row
+	Make string `json:"make,omitempty"`
+
+	// make, model, year on row
+	Mmy string `json:"mmy,omitempty"`
+
+	// Vehicle model on row
+	Model string `json:"model,omitempty"`
+
+	// check if it is tricoat or not
+	Tricoat bool `json:"tricoat,omitempty"`
+
+	// Vehcile year on row
+	// Maximum: 2023
+	// Minimum: 2000
+	Year int64 `json:"year,omitempty"`
+}
+
+// Validate validates this swatch row
+func (m *SwatchRow) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateYear(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *SwatchRow) validateYear(formats strfmt.Registry) error {
+	if swag.IsZero(m.Year) { // not required
+		return nil
+	}
+
+	if err := validate.MinimumInt("year", "body", m.Year, 2000, false); err != nil {
+		return err
+	}
+
+	if err := validate.MaximumInt("year", "body", m.Year, 2023, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this swatch row based on context it is used
+func (m *SwatchRow) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SwatchRow) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SwatchRow) UnmarshalBinary(b []byte) error {
+	var res SwatchRow
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
