# shopify-seller-api/pkg/swagger/swagger.yml
@@ -23,30 +23,11 @@ paths:
             type: string
             enum:
             - OK
-
-  /swatch/{make}:
-    get:
-      description: Return json file for a specific make that will help produces color swatches.
-      produces:
-      - application/json
-      parameters:
-        - name: make
-          in: path
-          type: string
-          required: true
-          description: name of the make we want on all color variants.
-      responses:
-        200:
-          description: Returns the the make.
-          schema:
-            type: array
-            items: {}
-        400:
-          description: Invalid "make" provided or not available.
-
+# both /swatch/{make} and /product/{make} produce flat files. As such their endpoints have been set up to receive 
+# information as an Array of objects with specific fields used in Python Scripts. Tell me what you think.
   /product/{make}:
     get:
-      description: Return json file for a specific make that will help produces products for seller central.
+      description: Return an array of objects for a specific make that will help produce color swatches for Amazon seller central.
       produces:
       - application/json
       parameters:
@@ -57,9 +38,94 @@ paths:
           description: name of the make we want on all product variants.
       responses:
         200:
-          description: Returns the the make.
+          description: A JSON object containing the data necessary to make seller central Product files.
           schema:
-            type: array
-            items: {}
+            $ref: "#/definitions/makeProducts"
         400:
           description: Invalid "make" provided or not available.
+# both /swatch/{make} and /product/{make} produce flat files. As such their endpoints have been set up to receive 
+# information as an Array of objects with specific fields used in Python Scripts. Tell me what you think.
+  /swatch/{make}:
+    get:
+      description: Return an array of objects for a specific make that will help produce color swatches for Amazon seller central.
+      parameters:
+        - name: make
+          in: path
+          type: string
+          required: true
+          description: Car make name
+      responses:
+        200:
+          description: A JSON object containing the data necessary to make all color swatches.
+          schema:
+            $ref: "#/definitions/makeSwatches"
+        400:
+          description: Invalid "make" provided or not available.
+
+definitions:
+  makeProducts:
+    title: Make Products
+    type: array
+    items:
+      title: Product Row
+      $ref: "#/definitions/productRow"
+  productRow:
+    title: Single Row of data to produce a colors Amazon Seller Central Product
+    type: object
+    properties:
+      handle:
+        title: the handle for the product variation example is make-model-year-touch-up-kit
+        type: string
+      optionName:
+        title: name of the Option1 Name field
+        type: string
+      optionValue:
+        title: value of the Option1 Name field, labeled Option1 Value
+        type: string
+      price:
+        title: price of the product.
+        type: number
+      year:
+        title: year of the product
+        type: integer
+        minimum: 2000
+        maximum: 2023
+  makeSwatches:
+    title: Make Swatches
+    type: array
+    items:
+      title: Swatch Row
+      $ref: "#/definitions/swatchRow"
+  swatchRow:
+    title: Single Row of data to produce a color swatch for a specific Make Model Year, and Color
+    type: object
+    properties:
+      make:
+        title: Vehicle make on row
+        type: string
+      model:
+        title: Vehicle model on row
+        type: string
+      year:
+        title: Vehcile year on row
+        type: integer
+        minimum: 2000
+        maximum: 2023
+      mmy:
+        title: make, model, year on row
+        type: string
+      colorName:
+        title: color name on row
+        type: string
+      colorCode:
+        title: color code on row
+        type: string
+      hexCode:
+        title: hex code value on row. Field name is Variant Metafield variants.color [color]
+        type: string
+      tricoat:
+        title: check if it is tricoat or not
+        type: boolean
+      handle:
+        title: the handle for the product variation example is make-model-year-touch-up-kit
+        type: string
